# zeta

./: .gitignore  Cargo.toml  README.md
examples/: first_5000.rs
src/: dat.rs  database.rs  lib.rs  lmfdb.rs  main.rs  repository.rs
